[package]
name = "rust-book-exercises"
version = "0.1.0"
authors = ["Zakkary Verrilli <zakkaryv@gmail.com>"]
edition = "2018"

[dependencies]
termion = "*"
rand = "*"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[unstable]
drain-filter = "yes"

# these are the default opt-levels for their respsective release profiles
# more optimizations = slower compile time = faster run time
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
