[package]
name = "rust_book_exercises"
version = "0.1.0"
authors = ["Zakkary Verrilli <zverrilli@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "An organized grouping of the various practice exercises found in The Rust Programming Language."

[dependencies]
rand = "^0.7.3"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[unstable]
drain-filter = "yes"

# these are the default opt-levels for their respsective release profiles
# more optimizations = slower compile time = faster run time
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
